--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
     <script type="text/javascript">
-        // document.write("hello world")
-        var x = 10;
-        document.write(x);
+        // // document.write("hello world")
+        // var x = 10;
+        // document.write(x);
+        var tune = -20.23123;
+        document.write(tune);
     </script>
 
 </body>
