--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         // // document.write("hello world")
         // var x = 10;
         // document.write(x);
-        var tune = -20.23123;
+        var tune = "HELLO WORLD";
         document.write(tune);
     </script>
 
