--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         // // document.write("hello world")
         // var x = 10;
         // document.write(x);
-        var tune = "HELLO WORLD";
-        document.write(tune);
+        // var tune = "HELLO WORLD";
+        // document.write(tune);
+        var name = "Olimjon";
+        var age = 21;
+        document.write("my name is " + name + " and i'm " + age + " years old")
     </script>
 
 </body>
