--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         // document.write(x);
         // var tune = "HELLO WORLD";
         // document.write(tune);
-        var name = "Olimjon";
-        var age = 21;
-        document.write("my name is " + name + " and i'm " + age + " years old")
+        // var name = "Olimjon";
+        // var age = 21;
+        // document.write("my name is " + name + " and i'm " + age + " years old")
+
+        
     </script>
 
 </body>
