--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         // var name = "Olimjon";
         // var age = 21;
         // document.write("my name is " + name + " and i'm " + age + " years old")
+        function funky() {
+            
+        }
 
-        
     </script>
 
 </body>
