--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
         // var age = 21;
         // document.write("my name is " + name + " and i'm " + age + " years old")
         function funky() {
-            
+            alert("ouch?!")
         }
+        funky();
 
     </script>
-
+    <form action="">
+        <input type="button" value="touch me" onclick="funky()">
+    </form>
 </body>
 
 </html>
