--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         funky();
 
     </script>
-    <form action="">
+    <form >
         <input type="button" value="touch me" onclick="funky()">
     </form>
 </body>
