--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         // var age = 21;
         // document.write("my name is " + name + " and i'm " + age + " years old")
         function funky() {
-            alert("ouh?!")
+            alert("ouch?!")
         }
         funky();
 
