--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         function funky() {
             alert("ouch?!")
         }
-        funky();
-
+        funky(
     </script>
     <form action=" ">
         <input type="button" value="touch me" onclick="funky()">
