--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         function funky() {
             alert("ouch?!")
         }
-        funky(
+        funky();
+
     </script>
     <form action=" ">
         <input type="button" value="touch me" onclick="funky()">
