--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         // var name = "Olimjon";
         // var age = 21;
         // document.write("my name is " + name + " and i'm " + age + " years old")
-        function funky() {
+        function funy() {
             alert("ouch?!")
         }
         funky();
