--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         function funky() {
             alert("ouch?!")
         }
-        funky();
+        fun
 
     </script>
     <form action=" ">
