--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         // document.write(tune);
         // var name = "Olimjon";
         // var age = 21;
-        // document.write("my name is " + name + " and i'm " + age + " years old")
+        document.write("my name is " + name + " and i'm " + age + " years old")
         function funky() {
             alert("ouch?!")
         }
