--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         // var tune = "HELLO WORLD";
         // document.write(tune);
         // var name = "Olimjon";
-        // var age = 21;
+        var age = 21;
         document.write("my name is " + name + " and i'm " + age + " years old")
         function funky() {
             alert("ouch?!")
