--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         // var x = 10;
         // document.write(x);
         // var tune = "HELLO WORLD";
-        // document.write(tune);
+        document.write(tune);
         var name = "Olimjon";
         var age = 21;
         document.write("my name is " + name + " and i'm " + age + " years old")
