--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <script type="text/javascript">
         // // document.write("hello world")
-        // var x = 10;
+        var x = 10;
         document.write(x);
         var tune = "HELLO WORLD";
         document.write(tune);
