--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <script type="text/javascript">
-        document.write("hello world")
+        // document.write("hello world")
         var x = 10;
         document.write(x);
         var tune = "HELLO WORLD";
