--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
         // document.write("hello world")
         // var x = 10;
-        document.write(x);
+        // document.write(x);
         var tune = "HELLO WORLD";
         document.write(tune);
         var name = "Olimjon";
