--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         // document.write(x);
         // var tune = "HELLO WORLD";
         // document.write(tune);
-        var name = "Olimjon";
+        // var name = "Olimjon";
         var age = 21;
         document.write("my name is " + name + " and i'm " + age + " years old")
         function funky() {
