--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         //     alert("ouch?!")
         // }
         // funky();
+        function meatball(x) {
+            alert("I love " + x)
+        }
 
     </script>
     <form action=" ">
