--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         // }
         // funky();
         function meatball(x) {
-            alert("I love " + x)
+            alert("I love " + x);
         }
-
+        meatball(bacon);
     </script>
     <form action=" ">
         <input type="button" value="touch me" onclick="funky()">
