--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         function meatball(x) {
             alert("I love " + x);
         }
-        meatball(bacon);
+        meatball("bacon");
+        meatball("my life")
+        meatball("pain")
     </script>
     <form action=" ">
         <input type="button" value="touch me" onclick="funky()">
