--- a/index.html
+++ b/index.html
@@ -22,16 +22,20 @@
         //     alert("ouch?!")
         // }
         // funky();
-        function meatball(x) {
-            alert("I love " + x);
+        // function meatball(x) {
+        //     alert("I love " + x);
+        // }
+        // meatball("bacon");
+        // meatball("my life")
+        // meatball("pain")
+        function apples(one, two) {
+            document.write(one + " is better than " + two)
         }
-        meatball("bacon");
-        meatball("my life")
-        meatball("pain")
+        apples("me", "myself");
     </script>
-    <form action=" ">
+    <!-- <form action=" ">
         <input type="button" value="touch me" onclick="funky()">
-    </form>
+    </form> -->
 </body>
 
 </html>
