--- a/index.html
+++ b/index.html
@@ -28,10 +28,20 @@
         // meatball("bacon");
         // meatball("my life")
         // meatball("pain")
-        function apples(one, two) {
-            document.write(one + " is better than " + two)
-        }
-        apples("me", "myself");
+        // function apples(one, two) {
+        //     document.write(one + " is better than " + two)
+        // }
+        // apples("me", "myself");
+
+
+
+
+
+
+
+
+
+        
     </script>
     <!-- <form action=" ">
         <input type="button" value="touch me" onclick="funky()">
