--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         //     document.write(one + " is better than " + two)
         // }
         // apples("me", "myself");
+        function tooeasy(){
+            return "gametime";
+        }
+        document.write(tooeasy());
+        alert(tooeasy());
 
 
 
@@ -41,7 +46,7 @@
 
 
 
-        
+
     </script>
     <!-- <form action=" ">
         <input type="button" value="touch me" onclick="funky()">
