--- a/index.html
+++ b/index.html
@@ -32,11 +32,17 @@
         //     document.write(one + " is better than " + two)
         // }
         // apples("me", "myself");
-        function tooeasy(){
-            return "gametime";
+        // function tooeasy(){
+        //     return "gametime";
+        // }
+        // document.write(tooeasy());
+        // alert(tooeasy());
+
+        function addNumbers(a, b) {
+            var c = a + b;
+            return c;
         }
-        document.write(tooeasy());
-        alert(tooeasy());
+        document.write(addNumbers(3, 6));
 
 
 
