--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
         // }
         // document.write(tooeasy());
         // alert(tooeasy());
-
-        function addNumbers(a, b) {
-            var c = a + b;
-            return c;
-        }
-        document.write(addNumbers(3, 6));
+        // function addNumbers(a, b) {
+        //     var c = a + b;
+        //     return c;
+        // }
+        // document.write(addNumbers(3, 6));
 
 
 
