--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
         //     return c;
         // }
         // document.write(addNumbers(3, 6));
+        function doFirst(){
+            document.write("I am First to! ");
+        }
+        function doSecond(){
+            document.write("2 ");
+        }
+        function start(){
+            doFirst();
+            doSecond();
+        }
+        start()
 
 
 
