--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
         //     doSecond();
         // }
         // start()
-
+        function doFirst() {
+            document.write("first! ");
+            doSecond();
+        }
+        function doSecond() {
+            document.write("Second! ");
+            doFirst();
+        }
 
 
 
