--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
         //     doSecond();
         // }
         // start()
-        function doFirst() {
-            document.write("first! ");
-            doSecond();
-        }
-        function doSecond() {
-            document.write("Second! ");
-            doFirst();
-        }
+        // function doFirst() {
+        //     document.write("first! ");
+        //     doSecond();
+        // }
+        // function doSecond() {
+        //     document.write("Second! ");
+        //     doFirst();
+        // }
+        // doFirst();
 
 
 
