--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         //     doFirst();
         // }
         // doFirst();
+        var applles = 53;
+        var hotdogs = 99;
+        
 
 
 
