--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
         // doFirst();
         var applles = 53;
         var hotdogs = 99;
-        
+        if ( applles == hotdogs){
+            document.write("Yey it worked")
+        }
+
 
 
 
