--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         //     doFirst();
         // }
         // doFirst();
-        var applles = 53;
-        var hotdogs = 99;
-        if ( applles != hotdogs){
-            document.write("Yey it worked")
-        }
+        // var applles = 53;
+        // var hotdogs = 99;
+        // if ( applles != hotdogs){
+        //     document.write("Yey it worked")
+        // }
 
 
 
