--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         // if ( applles != hotdogs){
         //     document.write("Yey it worked")
         // }
+        var firstName= "bucky";
+        var lastName = "roberts"
 
 
 
