--- a/index.html
+++ b/index.html
@@ -67,8 +67,13 @@
         // if ( applles != hotdogs){
         //     document.write("Yey it worked")
         // }
-        var firstName= "bucky";
+        var firstName = "bucky";
         var lastName = "roberts"
+        if (firstName == "bucky") {
+            if (lastName == "roberts") {
+                document.write("welcome bucky")
+            }
+        }
 
 
 
