--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         // if ( applles != hotdogs){
         //     document.write("Yey it worked")
         // }
-        var firstName = "bucky";
+        // var firstName = "bucky";
         var lastName = "roberts"
         if (firstName == "bucky") {
             if (lastName == "roberts") {
