--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         //     document.write("Yey it worked")
         // }
         // var firstName = "bucky";
-        var lastName = "roberts"
+        // var lastName = "roberts"
         if (firstName == "bucky") {
             if (lastName == "roberts") {
                 document.write("welcome bucky roberta")
