--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         // }
         // var firstName = "bucky";
         // var lastName = "roberts"
-        if (firstName == "bucky") {
+        // if (firstName == "bucky") {
             if (lastName == "roberts") {
                 document.write("welcome bucky roberta")
             }
