--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         // var firstName = "bucky";
         // var lastName = "roberts"
         // if (firstName == "bucky") {
-            if (lastName == "roberts") {
+            // if (lastName == "roberts") {
                 document.write("welcome bucky roberta")
             }
         }
