--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         // var lastName = "roberts"
         // if (firstName == "bucky") {
             // if (lastName == "roberts") {
-                document.write("welcome bucky roberta")
+                // document.write("welcome bucky roberta")
             }
         }
 
