--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
                 // document.write("welcome bucky roberta")
         //     }
         // }
+        var girl = "Anna";
+        switch(girl){
+            case "Anna":
+                document.write
+        }
 
 
 
