--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         var girl = "Anna";
         switch(girl){
             case "Anna":
-                document.write
+                document.write("hello");
+                break;
         }
 
 
