--- a/index.html
+++ b/index.html
@@ -70,15 +70,20 @@
         // var firstName = "bucky";
         // var lastName = "roberts"
         // if (firstName == "bucky") {
-            // if (lastName == "roberts") {
-                // document.write("welcome bucky roberta")
+        // if (lastName == "roberts") {
+        // document.write("welcome bucky roberta")
         //     }
         // }
         var girl = "Anna";
-        switch(girl){
+        switch (girl) {
             case "Anna":
                 document.write("hello");
                 break;
+            case "ashley":
+                document.write("bye");
+                break;
+            default:
+                document.write("this is the default")
         }
 
 
