--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         // document.write("welcome bucky roberta")
         //     }
         // }
-        var girl = "Anna";
-        switch (girl) {
+        // var girl = "Anna";
+        // switch (girl) {
             case "Anna":
                 document.write("hello");
                 break;
