--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
         // }
         // var girl = "Anna";
         // switch (girl) {
-            case "Anna":
-                document.write("hello");
-                break;
-            case "ashley":
-                document.write("bye");
-                break;
+            // case "Anna":
+            //     document.write("hello");
+            //     break;
+            // case "ashley":
+            //     document.write("bye");
+            //     break;
             default:
                 document.write("this is the default")
         }
