--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             // case "ashley":
             //     document.write("bye");
             //     break;
-            default:
-                document.write("this is the default")
-        }
+        //     default:
+        //         document.write("this is the default")
+        // }
 
 
 
