--- a/index.html
+++ b/index.html
@@ -87,18 +87,13 @@
         // }
 
 
-
-
-
-
-
-
-
-
     </script>
     <!-- <form action=" ">
         <input type="button" value="touch me" onclick="funky()">
     </form> -->
+
+    <a href="https://google.com" target="_blank" onMouseOut="alert('gametime!');">Hover over me</a>
+
 </body>
 
 </html>
