--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body onunload="alert('your website has loaded')">
     <script type="text/javascript">
         // document.write("hello world")
         // var x = 10;
