--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         //     default:
         //         document.write("this is the default")
         // }
-var tuna = "hello";
-document.write(tune.length)
+// var tuna = "hello";
+// document.write(tune.length)
 
 
     </script>
