--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
         // }
 // var tuna = "hello";
 // document.write(tune.length)
+function person(name, age){
+    this.name = name;
+    this.age= age;
+    this item
+}
 
 
     </script>
