--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ function person(name, age){
     this.name = name;
     this.age= age;
 }
-var bucky=new person
+var bucky=new ("bucky roberts", 24)
 
 
     </script>
