--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ var bucky=new ("bucky roberts", 24)
         <input type="button" value="touch me" onclick="funky()">
     </form> -->
 
-    <a href="https://google.com" target="_blank" onMouseOut="alert('gametime!');">Hover over me</a>
+    <!-- <a href="https://google.com" target="_blank" onMouseOut="alert('gametime!');">Hover over me</a> -->
 
 </body>
 
