--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script type="text/javascript">
+        function person(name, age) {
+            this.name = name;
+            this.age = age;
+        }
+        var bucky = new person("bucky roberts", 24)
+        var taylor = new person("Taylor Swift", 21)
+    </script>
 </head>
 
 <body onunload="alert('your website has loaded')">
@@ -87,11 +95,7 @@
         // }
         // var tuna = "hello";
         // document.write(tune.length)
-        function person(name, age) {
-            this.name = name;
-            this.age = age;
-        }
-        var bucky = new ("bucky roberts", 24)
+
 
 
     </script>
