--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             this.name = name;
             this.age = age;
         }
-        var bucky = new person("bucky roberts", 24)
-        var taylor = new person("Taylor Swift", 21)
+        var bucky = new person("bucky roberts", 24);
+        var taylor = new person("Taylor Swift", 21);
     </script>
 </head>
 
@@ -97,7 +97,7 @@
         // document.write(tune.length)
 
 
-
+        document.write(taylor.age);
     </script>
     <!-- <form action=" ">
         <input type="button" value="touch me" onclick="funky()">
