--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
 
         document.write(taylor.age);
+        document.write(taylor.name);
     </script>
     <!-- <form action=" ">
         <input type="button" value="touch me" onclick="funky()">
