--- a/newJs.html
+++ b/newJs.html
@@ -9,18 +9,17 @@
     <script type="text/javascript">
         // bucky = { name: "Bucky Roberts", age: 24, from: "Chicago" };
         // taylor = { name: "Taylor Swift", age: 21 };
-        function people(name, age) {
-            this.name = name;
-            this.age = age;
-            this.yearsUntillRetire = yearsLeft;
-        }
-        function yearsLeft() {
-            var yearLeft = 65 - this.age;
-            return yearLeft;
-        }
-        var taylor = new people("Taylor Swift", 21);
-        var bucky = new people("Bucky Roberts", 24);
-
+        // function people(name, age) {
+        //     this.name = name;
+        //     this.age = age;
+        //     this.yearsUntillRetire = yearsLeft;
+        // }
+        // function yearsLeft() {
+        //     var yearLeft = 65 - this.age;
+        //     return yearLeft;
+        // }
+        // var taylor = new people("Taylor Swift", 21);
+        // var bucky = new people("Bucky Roberts", 24);
 
     </script>
 </head>
@@ -28,7 +27,20 @@
 <body>
     <script type="text/javascript">
         // document.write(bucky.name + " loves " + taylor.name + " because she is " + taylor.age + " and he is from " + bucky.from);
-        document.write(taylor.yearsUntillRetire());
+        // document.write(taylor.yearsUntillRetire());
+
+        // Arrays
+
+        // var people = new Array("bucky", "Tommy", "Sarah", "Olimjon", "Hanah", "Mikety");
+        // document.write(people[3])
+        var stuff = new Array();
+        stuff[0] = "Maths";
+        stuff[1] = "CS";
+        stuff[2] = "Matrix";
+        document.write(stuff[0] + " and " + stuff[2]);
+
+
+
     </script>
 </body>
 
