--- a/newJs.html
+++ b/newJs.html
@@ -33,12 +33,16 @@
 
         // var people = new Array("bucky", "Tommy", "Sarah", "Olimjon", "Hanah", "Mikety");
         // document.write(people[3])
-        var stuff = new Array();
-        stuff[0] = "Maths";
-        stuff[1] = "CS";
-        stuff[2] = "Matrix";
-        document.write(stuff[0] + " and " + stuff[2]);
+        // var stuff = new Array();
+        // stuff[0] = "Maths";
+        // stuff[1] = "CS";
+        // stuff[2] = "Matrix";
+        // document.write(stuff[0] + " and " + stuff[2]);
+        var dudes = new Array("Bucky", "Olimjon", "Dan");
+        var chicks = new Array("Lisa", "Erin", "Hannah");
+        var people = dudes.concat(chicks);
 
+        document.write(people[5]);
 
 
     </script>
