--- a/newJs.html
+++ b/newJs.html
@@ -38,11 +38,14 @@
         // stuff[1] = "CS";
         // stuff[2] = "Matrix";
         // document.write(stuff[0] + " and " + stuff[2]);
-        var dudes = new Array("Bucky", "Olimjon", "Dan");
-        var chicks = new Array("Lisa", "Erin", "Hannah");
-        var people = dudes.concat(chicks);
-
-        document.write(people[5]);
+        // var dudes = new Array("Bucky", "Olimjon", "Dan");
+        // var chicks = new Array("Lisa", "Erin", "Hannah");
+        // var people = dudes.concat(chicks);
+        // document.write(people[5]);
+        var movies = new Array("Avator", "Invisible Guest", "Vanilla Sky", "100");
+        var string1 = movies.join(" - ");
+        movies.pop();
+        document.write(string1);
 
 
     </script>
