--- a/newJs.html
+++ b/newJs.html
@@ -42,11 +42,15 @@
         // var chicks = new Array("Lisa", "Erin", "Hannah");
         // var people = dudes.concat(chicks);
         // document.write(people[5]);
-        var movies = new Array("Avator", "Invisible Guest", "Vanilla Sky", "100");
-        var string1 = movies.join(" - ");
-        movies.pop();
-        document.write(string1);
-
+        // var movies = new Array("Avator", "Invisible Guest", "Vanilla Sky", "100");
+        // var string1 = movies.join(" - ");
+        // movies.pop();
+        // document.write(string1);
+        var bp = new Array("head", "neck", "arm", "fingers");
+        bp.reverse();
+        bp.push("legs", 20, "hands");
+        var string1 = bp.join();
+        document.write(string1)
 
     </script>
 </body>
