--- a/newJs.html
+++ b/newJs.html
@@ -46,15 +46,22 @@
         // var string1 = movies.join(" - ");
         // movies.pop();
         // document.write(string1);
-        var bp = new Array("head", "neck", "arm", "fingers");
-        bp.reverse();
-        bp.push("legs", 20, "hands");
-        var string1 = bp.join("  ");
-        document.write(string1 + " <br/> ")
-        bp.sort();
-        var string1 = bp.join("  ");
-        document.write(string1)
-        
+        // var bp = new Array("head", "neck", "arm", "fingers");
+        // bp.reverse();
+        // bp.push("legs", 20, "hands");
+        // var string1 = bp.join("  ");
+        // document.write(string1 + " <br/> ")
+        // bp.sort();
+        // var string1 = bp.join("  ");
+        // document.write(string1)
+
+        // var crap = new Array(3);
+        // for (i = 0; i < 3; i++) {
+        //     crap[i] = prompt("Enter smth to the array: ", "");
+        // }
+        // var string1 = crap.join("__");
+        // document.write(string1);
+
 
     </script>
 </body>
