--- a/newJs.html
+++ b/newJs.html
@@ -54,13 +54,19 @@
         // bp.sort();
         // var string1 = bp.join("  ");
         // document.write(string1)
-
         // var crap = new Array(3);
         // for (i = 0; i < 3; i++) {
         //     crap[i] = prompt("Enter smth to the array: ", "");
         // }
         // var string1 = crap.join("__");
         // document.write(string1);
+        // var stuff = new Array("apples", "banana", "pears", "tuna", "hat");
+        // stuff.sort();
+
+        // for (i = 0; i < stuff.length; i++) {
+        //     document.write(stuff[i] + " <br/> ");
+        // }
+
 
 
     </script>
