--- a/newJs.html
+++ b/newJs.html
@@ -66,6 +66,11 @@
         // for (i = 0; i < stuff.length; i++) {
         //     document.write(stuff[i] + " <br/> ");
         // }
+        var bucky = new Array();
+        bucky["color"] = "blue";
+        bucky["food"] = "hot pockets";
+        document.write("buckys favourite food is " + bucky["food"] + " and color is " + bucky["color"]);
+
 
 
 
