--- a/newJs.html
+++ b/newJs.html
@@ -70,7 +70,9 @@
         // bucky["color"] = "blue";
         // bucky["food"] = "hot pockets";
         // document.write("buckys favourite food is " + bucky["food"] + " and color is " + bucky["color"]);
-
+        var number = prompt("Enter a number: ", "");
+        var answer = Math.sqrt(number);
+        alert("the sqrt of " + number + " is " + answer);
 
 
 
