--- a/newJs.html
+++ b/newJs.html
@@ -70,9 +70,18 @@
         // bucky["color"] = "blue";
         // bucky["food"] = "hot pockets";
         // document.write("buckys favourite food is " + bucky["food"] + " and color is " + bucky["color"]);
-        var number = prompt("Enter a number: ", "");
-        var answer = Math.sqrt(number);
-        alert("the sqrt of " + number + " is " + answer);
+        // var number = prompt("Enter a number: ", "");
+        // var answer = Math.sqrt(number);
+        // alert("the sqrt of " + number + " is " + answer);
+
+        // function printTime() {
+        //     var now = new Date();
+        //     var hours = now.getHours();
+        //     var mins = now.getMinutes();
+        //     var seconds = now.getSeconds();
+        //     document.write(hours + ":" + mins + ":" + seconds + "<br/>")
+        // }
+        // setInterval("printTime()", 1000);
 
 
 
